# Jupyter_Canvas_Widget

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  requirements.txt  setup.cfg  setup.py
jpy_canvas/: __init__.py  canvas.py  image.py  old_widget_canvas.py
jpy_canvas/static/: extension.js  index.js  index.js.map
js/: README.md  package-lock.json  package.json  webpack.config.js
js/lib/: canvas.js  embed.js  extension.js  index.js  jupyter-canvas.js  old_widget_canvas.js
notebooks/: example mouse events.ipynb  example.ipynb
